<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsReturnFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:contentDescription="@string/back_content_description"
        android:src="@drawable/abc_vector_test"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#FFFFFF" />

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/settings_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/settingsReturnFloatingActionButton"
        app:layout_constraintStart_toEndOf="@+id/settingsReturnFloatingActionButton"
        app:layout_constraintTop_toTopOf="@+id/settingsReturnFloatingActionButton" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsReturnFloatingActionButton">

        <Switch
            android:id="@+id/vibrateSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_padding"
            android:text="@string/vibrate_label" />

        <Switch
            android:id="@+id/soundSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_padding"
            android:text="@string/sound_label" />

        <Switch
            android:id="@+id/showRangeValuesSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_padding"
            android:text="@string/show_range_values_label" />

        <Switch
            android:id="@+id/darkModeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_padding"
            android:text="@string/dark_mode_label" />

        <Switch
            android:id="@+id/offlineSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_padding"
            android:text="@string/offline_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <Button
            android:id="@+id/moreStatsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="@dimen/app_button_width"
            android:text="@string/more_stats_label"
            app:cornerRadius="@dimen/app_button_corner_radius" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privacyPolicyLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/privacy_policy_label" />

            <TextView
                android:id="@+id/discordLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/discord_label" />

            <TextView
                android:id="@+id/redditLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reddit_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rateLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rate_label" />

            <TextView
                android:id="@+id/githubLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/github_label" />

            <TextView
                android:id="@+id/donateLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/donate_label" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>